--- a/NYAN.CAT!_files/base.css
+++ b/NYAN.CAT!_files/base.css
@@ -1,27 +1,22 @@
-@import url(http://fonts.googleapis.com/css?family=Press+Start+2P);
-
 .music {
   position: absolute;
   bottom: 0;
   right: 0;
 }
-
+html, body {
+  height: 100%;
+}
+html {
+  overflow: hidden;
+}
 a img {
   border: none;
-}
-
-@font-face {
-  font-family:SilkscreenNormal;
-    src:url(fonts/slkscr.ttf),url(fonts/slkscr.eot);
-    font-weight:400;
-    font-style:normal;
 }
 
 body {
   text-transform: uppercase;
   background: #0f4d8f;
   color: white;
-  font-family: SilkscreenNormal, Monaco, "Courier New", Courier, monospace;
   overflow-x: hidden;
   font-size: 1px;
   margin: 2;
@@ -82,7 +77,6 @@ h3 {
 .announce {
   z-index: 4;
   text-transform: capitalize;
-  font-family: SilkscreenNormal;
   margin-top: 8px;
   position: absolute;
   color: #000000;
@@ -407,7 +401,6 @@ h3 {
 
 .skinpick {
   background: rgba(0,0,0,0.35);
-  font-family: SilkscreenNormal;
 }
 
 .langchooser {
@@ -559,7 +552,6 @@ h3 {
   left: 0;
   padding: 10px;
   text-transform: capitalize;
-  font-family: SilkscreenNormal;
   color: #000000;
   font-size: 26px;
   width: 100%;
